@@ -29,16 +29,47 @@
     <parent>
         <groupId>org.jboss.hal</groupId>
         <artifactId>hal-parent-with-dependencies</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.3</version>
         <relativePath>../parent-with-dependencies/pom.xml</relativePath>
     </parent>
 
     <artifactId>hal-gui</artifactId>
     <name>HAL :: GUI</name>
-    <packaging>war</packaging>
-
+    <description>HAL's user interface with the GWT entry point. Serves as dependency for the web app in 'build/dev' and
+        for the release artifact in 'build/release'.
+    </description>
+    <packaging>jar</packaging>
 
     <dependencies>
+        <!-- HAL -->
+        <dependency>
+            <groupId>org.jboss.hal</groupId>
+            <artifactId>hal-dmr</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.hal</groupId>
+            <artifactId>hal-flow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.hal</groupId>
+            <artifactId>hal-processors</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.hal</groupId>
+            <artifactId>hal-spi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.hal</groupId>
+            <artifactId>hal-useware</artifactId>
+        </dependency>
+
+        <!-- Ballroom -->
+        <dependency>
+            <groupId>org.jboss.ballroom</groupId>
+            <artifactId>widgets</artifactId>
+        </dependency>
+
         <!-- UberFire -->
         <dependency>
             <groupId>org.uberfire</groupId>
@@ -62,7 +93,10 @@
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-bus</artifactId>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.errai</groupId>
+            <artifactId>errai-ui</artifactId>
         </dependency>
 
         <!-- Runtime / Container dependencies -->
@@ -78,6 +112,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-dev</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava-gwt</artifactId>
         </dependency>
@@ -89,6 +128,14 @@
             <groupId>com.allen-sauer.gwt.log</groupId>
             <artifactId>gwt-log</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code</groupId>
+            <artifactId>gwt-visualization</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>code.google.com</groupId>
+            <artifactId>protovis-gwt</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -99,45 +146,17 @@
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
-            <resource>
-                <directory>target/generated-sources/annotations</directory>
-            </resource>
         </resources>
-        <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
-
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.codehaus.mojo</groupId>
-                                        <artifactId>gwt-maven-plugin</artifactId>
-                                        <versionRange>[2.4.0,)</versionRange>
-                                        <goals>
-                                            <goal>resources</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore/>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
 
         <plugins>
+            <!--
+                We need source files generated by the Java Annotations Processor
+                in the resulting JAR for GWT to reference in dependent projects.
+                Consequentially copy the source files to the target folder before packaging.
+            -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>${version.resources.plugin}</version>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
@@ -146,70 +165,29 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
+                            <outputDirectory>${basedir}/target/classes</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>target/generated-sources/annotations</directory>
                                 </resource>
                             </resources>
-                            <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.uberfire</groupId>
-                        <artifactId>uberfire-workbench-processors</artifactId>
-                        <version>${version.org.uberfire}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.uberfire</groupId>
-                        <artifactId>uberfire-client-api</artifactId>
-                        <version>${version.org.uberfire}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.uberfire</groupId>
-                        <artifactId>uberfire-security-api</artifactId>
-                        <version>${version.org.uberfire}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>gwt-maven-plugin</artifactId>
                 <configuration>
-                    <logLevel>INFO</logLevel>
-                    <localWorkers>4</localWorkers>
-                    <runTarget>index.html</runTarget>
-                    <module>org.jboss.hal.HAL</module>
-                    <hostedWebApp>${project.build.directory}/${project.build.finalName}</hostedWebApp>
-                    <failOnError>true</failOnError>
-                    <disableCastChecking>true</disableCastChecking>
-                    <disableClassMetadata>true</disableClassMetadata>
-                    <enableClosureCompiler>true</enableClosureCompiler>
-                    <gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
-                    <!-- do not insert line breaks in this string; it breaks Windows compatibility -->
-                    <extraJvmArgs>-Xmx1g -Xms756m -XX:MaxPermSize=256m -XX:CompileThreshold=1000 -Derrai.jboss.javaopts=-XX:MaxPermSize=256m -Derrai.dev.context=${project.artifactId} -Derrai.jboss.javaagent.path=${settings.localRepository}/org/jboss/errai/errai-client-local-class-hider/${version.org.jboss.errai}/errai-client-local-class-hider-${version.org.jboss.errai}.jar=classPattern=${project.groupId}.client/.*</extraJvmArgs>
+                    <compilerArgs>
+                        <!--
+                            Options for the annotation processors
+                            All properties prefixed with 'gwt' are written into the
+                            generated GWT module (without the 'gwt.' prefix)
+                        -->
+                        <compilerArg>-Agwt.console.version=${project.version}</compilerArg>
+                    </compilerArgs>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>gwt-clean</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>gwt-compile</id>
-                        <goals>
-                            <goal>resources</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
